lib_test/cases/no_date/expected
Error in line 1, column 7:
0.1.0:
      ^
Expecting date or branch/release name (in parentheses) or space or tab
